cert/linkerd-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: linkerd
  namespace: linkerd
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  tls:
    - hosts:
        - linkerd.k8s.intra
      secretName: linkerd-dashboard-tls
  rules:
    - host: linkerd.k8s.intra
      http:
        paths:
          - backend:
             serviceName: linkerd-web
             servicePort: 8084
